Fixed upload miss clicking issue Lot navigator shows only valid products Menu is nicer
Signed-off-by:  <akorolex>

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -73,8 +73,8 @@
 
   <%= content_tag :div, class: "row" do %>
     <div class="fileUpload button">
+      <%= f.file_field :photo, multiple: true, class: 'fileField' %>
       <%= fa_icon("camera lg") %><span> Upload local images </span>
-      <%= f.file_field :photo, multiple: true, class: "fileField" %>
     </div>
   <% end %>
   <%= content_tag :div, class: "row" do %>
