--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -11,10 +11,13 @@
   top: 0;
   right: 0;
   margin: 0;
-  padding: 0;
-  font-size: 20px;
+  padding-top: 1rem;
+  padding-right: 2rem;
+  padding-bottom: 1.0625rem;
+  padding-left: 2rem;
+  font-size: 1rem;
   cursor: pointer;
-  opacity: 0;
+  opacity: 0.0;
   filter: alpha(opacity=0);
 }
 
