--- a/app/views/lots/manage.html.erb
+++ b/app/views/lots/manage.html.erb
@@ -1,7 +1,7 @@
 
 
 <% @lots.each do |lot| %>
-
+  <% products = Product.where(lot_id: lot.id).where.not(status: nil)%>
   <div style="border: solid #ffffff; border-radius: 25px">
 
       <div class="row" >
@@ -10,7 +10,7 @@
           <br>
           Status : <%= lot.status %>
           <br>
-          Products : <%= lot.products.count %>
+          Products : <%= products.count %>
           <br>
           <%= link_to({controller: 'lots', action: "edit", id: lot.id}, {class: "button round secondary"}) do %>
               <%=fa_icon("edit lg")%> Edit lot
@@ -22,7 +22,7 @@
         </div>
         <div class="medium-9  columns">
           <div class="owl-carousel">
-            <% lot.products.each do |product| %>
+            <% products.each do |product| %>
                 <div class="item">
                   <%=link_to({controller: 'products', action: "edit", id: product.id}) do %>
                   <ul class="pricing-table">
