--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -7,9 +7,9 @@
         <li><%= link_to 'Profile', profiles_edit_path %></li>
         <li><%= link_to 'Addresses', addresses_path %></li>
         <li><%= link_to 'Edit account', edit_user_registration_path %></li>
-        <li><%= link_to 'Users', users_path %></li>
+        <li><%= link_to 'My Lots', manage_lots_path %></li>
         <li><%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %></li>
-      <ul>
+      </ul>
     </li>
   <% else %>
     <li><%= link_to 'Login', new_user_session_path, :remote => true %></li>
