--- a/app/views/lots/manage.html.erb
+++ b/app/views/lots/manage.html.erb
@@ -1,4 +1,4 @@
-
+<!--TODO Lazy load and products limit-->
 
 <% @lots.each do |lot| %>
   <% products = Product.where(lot_id: lot.id).where.not(status: nil)%>
@@ -8,7 +8,7 @@
         <div class="medium-3  columns">
           <h3> <%= lot.title %> </h3>
           <br>
-          Status : <%= lot.status %>
+          Status : <%= lot.status.to_s.humanize %>
           <br>
           Products : <%= products.count %>
           <br>
