--- a/app/views/lots/manage.html.erb
+++ b/app/views/lots/manage.html.erb
@@ -1,7 +1,5 @@
-<!--TODO Lazy load and products limit-->
-
 <% @lots.each do |lot| %>
-  <% products = Product.where(lot_id: lot.id).where.not(status: nil)%>
+  <% products = Product.where(lot_id: lot.id).where.not(status: nil).limit(100)%>
   <div style="border: solid #ffffff; border-radius: 25px">
 
       <div class="row" >
@@ -18,7 +16,7 @@
           <%= link_to({controller: 'lots', action: "populate", id: lot.id}, {class: "button round secondary"}) do %>
               <%=fa_icon("gift lg")%> Edit products
           <% end %>
-          <%=link_to(lot, method: :delete, data: { confirm: 'Lot description and all products will be deleted! Are you sure?' }, class: "button round secondary") do %>
+          <%=link_to(lot, method: :delete, data: { confirm: 'All products within the lot will be deleted! Are you sure?' }, class: "button round secondary") do %>
               <i class="fa fa-trash-o fa-lg"></i>
               <span> Delete lot</span>
           <% end %>
